docs(README): update README
update README

Signed-off-by: mritd <mritd@linux.com>